<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/favouriteLayout"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_baseline_favorite_24"
                android:layout_gravity="end"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/primaryTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:text="I have a joke ald say it's a .." />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/extraTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="gone"
                tools:text="I have a joke ald say it's a ..." />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:padding="24dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/flagsLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/flagsLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="0.5"
                        android:text="@string/flags_label"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:text="Flags" />
                    <CheckBox
                        android:id="@+id/sexistFlag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/sexist_checkbox_label"
                        android:checked="true"
                        android:clickable="false"/>
                    <CheckBox
                        android:id="@+id/racistFlag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/racist_checkbox_label"
                        android:checked="true"
                        android:clickable="false"/>
                    <CheckBox
                        android:id="@+id/politicalFlag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/political_checkbox_label"
                        android:checked="true"
                        android:clickable="false"/>
                    <CheckBox
                        android:id="@+id/nsfwFlag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/nsfw_checkbox_label"
                        android:checked="true"
                        android:clickable="false"/>
                    <CheckBox
                        android:id="@+id/explicitFlag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/explicit_checkbox_label"
                        android:checked="true"
                        android:clickable="false"/>
                    <CheckBox
                        android:id="@+id/religiousFlag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/religious_checkbox_label"
                        android:checked="true"
                        android:clickable="false"/>

                </androidx.appcompat.widget.LinearLayoutCompat>



            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>